2010-07-08  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/44831
	* tree-ssa-phiprop.c (phiprop_insert_phi): Properly build
	a MEM_REF preserving TBAA info of the original dereference.
	Dereference the original pointer if the address is not
	invariant.
	(propagate_with_phi): Fixup type checks wrt MEM_REFs.  Require
	at least one invariant address that we are going to dereference.

	* gcc.c-torture/compile/pr44831.c: New testcase.
	* gcc.dg/tree-ssa/pr21463.c: Adjust.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@161950 138bc75d-0d04-0410-961f-82ee72b054a4